--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,48 @@
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-// TODO
+:root {
+  --pink-200: #ff57b2;
+
+  --gray-50: #f8f8f8;
+  --gray-200: #d7d7d7;
+  --gray-400: #bbbbbb;
+  --gray-900: #1a1d23;
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+body {
+  background: var(--gray-900);
+  color: var(--gray-200);
+}
+
+body,
+select,
+input,
+textarea,
+button {
+  font: 400 1rem 'Inter', sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
