--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -16,6 +16,14 @@
     font-size: 2.4rem;
     margin: 4rem 0 1.5rem;
   }
+
+  .dividingLine {
+    border: 0;
+    height: 1px;
+    background-color: var(--gray-200);
+    opacity: 15%;
+    margin: 3rem 0;
+  }
 }
 
 .post {
