--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -24,6 +24,38 @@
     opacity: 15%;
     margin: 3rem 0;
   }
+
+  .containerOfOtherPosts {
+    display: flex;
+    justify-content: space-between;
+
+    margin-bottom: 2.5rem;
+
+    a {
+      transition: filter 0.2s;
+    }
+
+    a:last-child {
+      text-align: right;
+    }
+
+    a:hover {
+      filter: brightness(0.8);
+    }
+
+    h3 {
+      font-weight: 400;
+      font-size: 1.2rem;
+      color: var(--gray-50);
+      margin-bottom: 0.2rem;
+    }
+
+    small {
+      color: var(--pink-200);
+      font-weight: 600;
+      font-size: 1rem;
+    }
+  }
 }
 
 .post {
